2010-10-05  Luiz Agostini  <luiz.agostini@openbossa.org>

Reviewed by Antti Koivisto.

        [Qt] Webkit2 MacOS build fix
        https://bugs.webkit.org/show_bug.cgi?id=47167

        Qt WebKit2 MacOS build fix.

        * UIProcess/API/C/WKNativeEvent.h:
        * UIProcess/API/qt/qwkpage.cpp:
        * UIProcess/API/qt/qwkpage.h:
        * WebKit2.pri:

Canonical link: https://commits.webkit.org/59710@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@69103 268f45cc-cd09-0410-ab3c-d52691b4dbfc