WebKit2/UIProcess/API/C/WKNativeEvent.h
@@ -30,6 +30,10 @@
 extern "C" {
 #endif
 
+#if PLATFORM(QT)
+class QEvent;
+typedef const QEvent* WKNativeEventPtr;
+#else
 #ifdef __APPLE__
 #ifdef __OBJC__
 @class NSEvent;
@@ -41,6 +45,7 @@ typedef NSEvent *WKNativeEventPtr;
 typedef const struct tagMSG* WKNativeEventPtr;
 #else
 typedef const void* WKNativeEventPtr;
+#endif
 #endif
 
 #ifdef __cplusplus
